# TRAVEL_ground_filter_python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-web.yml
configs/: default.yaml
data/: autoware_front.npy
docs/: index.html  interactive.html  travel_py-0.1.0-py3-none-any.whl  wheel_info.json
docs/data/: demo_payload.json  sample.npy
docs/travel_py/: adjacency.py  cell_features.py  config.py  grid.py  pipeline.py  plane.py  seed.py  traversal.py  types.py
src/travel_py/: accept.py  config.py  debug_viz.py  graph.py  grid.py  labeling.py  main.py  pipeline.py  plane.py  seed.py  traversal.py  types.py  viz_data.py
tests/: test_adjacency.py  test_cell_features.py  test_config.py  test_graph.py  test_grid.py  test_labeling.py  test_plane.py  test_seed.py  test_traversal.py
tools/: build_web.py  export_github_pages.py  make_sample.py  pcd_to_npy.py  rerun_debug.py
