[project]
name = "travel-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "pydantic>=2.12.5",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
